tests/vrs/interface/interface_03_register_not_separated_expected.txt
error: expected `}`, found `reg`
     --> tests/vrs/interface/interface_03_register_not_separated.vrs:4:9
      |
    4 |          reg foo [ 8 ]
      |          ^^^ help: add `}` here.
